# Rica

./: .gitignore  .rica_memory.json  README.md  RICA_SYSTEM_VALIDATION_REPORT.md  pyproject.toml  pytest.ini  test_review.py
rica/: __init__.py  __main__.py  agent.py  agent_memory.py  agent_watch_bridge.py  api.py  cli.py  codegen.py  config.py  console.py  dag.py  dashboard.py  db.py  debugger.py  dep_graph.py  display.py  doctor.py  executor.py  explainer.py  exporter.py  hooks.py  importer.py  llm.py  localizer.py  logging_utils.py  main.py  models.py  patcher.py  planner.py  reader.py  rebuilder.py  refactorer.py  registry.py  replacer.py  replacer_backup.py  result.py  reviewer.py  search.py  setup.py  snapshotter.py  (+7 more)
rica/agents/: __init__.py  coder_agent.py  debugger_agent.py  executor_agent.py  memory_agent.py  planner_agent.py  research_agent.py  reviewer_agent.py  test_agent.py
rica/core/: __init__.py  context_builder.py  controller.py  orchestrator.py  project_analyzer.py  repo_graph.py  repo_summary.py  task_queue.py  worker_pool.py
rica/git/: __init__.py  git_manager.py
rica/memory/: __init__.py  memory_manager.py  memory_store.py  project_memory.py
rica/prompts/: __init__.py  (+15 more)
scripts/: run_tests.py
test_workspace/: .rica_memory.json
tests/: test_agent.py  test_agent_e2e.py  test_api.py  test_ast_editor.py  test_cli.py  test_debugger_agent.py  test_export_import.py  test_hooks.py  test_localizer.py  test_memory_store.py  test_multi_agent.py  test_notes.py  test_orchestrator.py  test_patcher.py  test_planner.py  test_setup.py  test_swebench_mode.py  test_tagging.py  test_workspace.py
(+8 files in other folders)
