[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rica"
version = "0.1.0"
description = "Language-Agnostic Autonomous Coding Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "google-genai>=0.3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "watchdog>=4.0.0",
]

[project.scripts]
rica = "rica.main:app"

[tool.hatch.build.targets.wheel]
packages = ["rica"]
